# xdb.org

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
apps/demo/: package.json
apps/demo/src/: App.css  App.tsx
apps/demo/src-tauri/: Cargo.toml  tauri.conf.json
apps/demo/src-tauri/capabilities/: default.json
apps/demo/src-tauri/src/: lib.rs  main.rs
crates/xdb/: Cargo.toml
crates/xdb/src/: db.rs  lib.rs  network.rs  tauri.rs
