[package]
name = "xdb-demo"
version.workspace = true
edition.workspace = true
description = "Demo application showcasing XDB - Local-First P2P Database"

[lib]
name = "xdb_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
# XDB - the local-first P2P database
xdb = { path = "../../../crates/xdb" }

# Tauri
tauri = { workspace = true }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Async & Utils
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
default = []
